--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.7.9",
     "next": "15.1.7",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.4",
