--- a/project/package.json
+++ b/project/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.4",
